--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     "type": "library",
     "authors": [
         {
-            "name": "George Chitechi",
-            "email": "flightsapps@gmail.com",
+            "name": "Ogounga Emmanuel",
+            "email": "xslainconcept@gmail.com",
             "role": "Developer"
         }
     ],
