--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         }
     ],
     "require": {
-        "php": "^7|^8",
-        "laravel/framework": "^6|^7|^8|^10.10",
-        "laravel/ui": "^2|^3|^4",
+        "php": "^8.1",
+        "laravel/framework": "^10.10",
+        "laravel/ui": "^4",
         "livewire/livewire": "^3.3"
     },
     "require-dev": {},
