--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": "^8.1",
         "laravel/framework": "^10.10",
         "laravel/ui": "^4",
-        "livewire/livewire": "^3.3"
+        "livewire/livewire": "^3.3",
+        "jantinnerezo/livewire-alert": "^3.0"
     },
     "require-dev": {},
     "autoload": {
