--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,15 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "laravel/framework": "^10.10",
+        "php": "^8.2",
+        "laravel/framework": "^12.0",
         "laravel/ui": "^4",
         "livewire/livewire": "^3.3",
         "jantinnerezo/livewire-alert": "^3.0"
     },
-    "require-dev": {},
+    "require-dev": {
+        "rector/rector": "^2.0"
+    },
     "autoload": {
         "psr-4": {
             "Xslain\\LivewireCrud\\": "src"
