--- a/composer.json
+++ b/composer.json
@@ -33,32 +33,34 @@
         }
     ],
     "require": {
-        "php": "^8.0|^8.1|^8.2|^8.3",
+        "php": "^8.1|^8.2|^8.3|^8.4",
         "laravel/framework": "^9.0|^10.0|^11.0|^12.0",
         "livewire/livewire": "^3.0",
-        "laravel/ui": "^4.0",
+        "laravel/ui": "^4.0|^5.0",
         "aliqasemzadeh/livewire-bootstrap-modal": "^2.3",
         "php-flasher/flasher-laravel": "^2.1",
-        "intervention/image": "^3.0",
+        "intervention/image": "^3.0|^4.0",
         "maatwebsite/excel": "^3.1",
-        "barryvdh/laravel-dompdf": "^2.0",
-        "spatie/laravel-permission": "^6.0",
-        "spatie/laravel-activitylog": "^4.7",
+        "barryvdh/laravel-dompdf": "^2.0|^3.1",
+        "spatie/laravel-permission": "^6.0|^7.0",
+        "spatie/laravel-activitylog": "^4.7|^5.0",
         "league/flysystem": "^3.0",
-        "pusher/pusher-php-server": "^7.0",
-        "laravel/sanctum": "^3.0|^4.0"
+        "pusher/pusher-php-server": "^7.0|^8.0",
+        "laravel/sanctum": "^3.0|^4.0|^5.0"
     },
     "require-dev": {
         "rector/rector": "^2.1",
-        "phpunit/phpunit": "^10.0|^11.0",
-        "orchestra/testbench": "^8.0|^9.0",
-        "mockery/mockery": "^1.4",
-        "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^7.0|^8.0",
-        "pestphp/pest": "^2.0",
-        "pestphp/pest-plugin-laravel": "^2.0",
-        "spatie/laravel-ray": "^1.32",
-        "fakerphp/faker": "^1.21"
+        "phpunit/phpunit": "^10.0|^11.0|^12.0",
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
+        "mockery/mockery": "^1.4|^2.0",
+        "laravel/pint": "^1.0|^2.0",
+        "nunomaduro/collision": "^7.0|^8.0|^9.0",
+        "pestphp/pest": "^2.0|^3.0",
+        "pestphp/pest-plugin-laravel": "^2.0|^3.0",
+        "spatie/laravel-ray": "^1.32|^2.0",
+        "fakerphp/faker": "^1.21|^2.0",
+        "phpstan/phpstan": "^1.10|^2.0",
+        "larastan/larastan": "^2.0|^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -80,6 +82,15 @@
         "analyse": "vendor/bin/phpstan analyse",
         "rector": "vendor/bin/rector process",
         "rector-dry": "vendor/bin/rector process --dry-run",
+        "quality": [
+            "@format-check",
+            "@analyse",
+            "@test"
+        ],
+        "setup-hooks": [
+            "cp .github/hooks/pre-commit .git/hooks/pre-commit",
+            "chmod +x .git/hooks/pre-commit"
+        ],
         "post-install-cmd": [
             "@php artisan vendor:publish --provider=\"LivewireCrud\\LivewireCrudServiceProvider\" --tag=config --force"
         ]
