--- a/composer.json
+++ b/composer.json
@@ -35,9 +35,8 @@
     "require": {
         "php": "^8.1|^8.2|^8.3|^8.4",
         "laravel/framework": "^9.0|^10.0|^11.0|^12.0",
-        "livewire/livewire": "^3.5",
+        "livewire/livewire": "^3.0|^4.0",
         "laravel/ui": "^4.0|^5.0",
-        "aliqasemzadeh/livewire-bootstrap-modal": "^2.3",
         "php-flasher/flasher-laravel": "^2.1",
         "intervention/image": "^3.0|^4.0",
         "maatwebsite/excel": "^3.1",
